Addresses PR feedback: Adds javadocs. Adds Query class to encapulate the Query datastructure and string parsing.